--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -14,7 +14,7 @@
 	</div>
 </div>
 
-<div class="container">
+<div class="container mainContent">
 	<div class="row" style="{{init ? '' : 'display:none;'}}">
 		<div class="col-xs-12 col-sm-6 col-lg-4">
 			<div class="thermo-component thermo-status">
