--- a/views/layout.handlebars
+++ b/views/layout.handlebars
@@ -4,7 +4,10 @@
 		<title>{{title}}</title>
 
 		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+
+		<link rel="icon" type="image/png" href="{{assetsBasePath}}/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="{{assetsBasePath}}/favicon-194x194.png" sizes="194x194">
 
 		<link rel="stylesheet" href="{{assetsBasePath}}/build/main.css" />
 		<link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet">
