Optimize performance of mobile app.

--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -14,6 +14,8 @@
 
 <div class="container mainContent">
 	<div class="row" style="{{init ? '' : 'display:none;'}}">
+		{{userAgent}}
+
 		<div class="col-xs-12 col-sm-6 col-lg-4">
 			<div class="thermo-component thermo-status">
 				<div class="thermo-status--outside">
