Detect webview and optimize battery life.

--- a/views/angular/index.html
+++ b/views/angular/index.html
@@ -14,7 +14,7 @@
 
 <div class="container mainContent">
 	<div class="row" style="{{init ? '' : 'display:none;'}}">
-		{{userAgent}}
+		{{isMobileApp}}
 
 		<div class="col-xs-12 col-sm-6 col-lg-4">
 			<div class="thermo-component thermo-status">
